--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,9 +9,9 @@
   --font-great-vibes: var(--font-great-vibes);
   --font-amiri: var(--font-amiri);
   --font-be-vietnam-pro: var(--font-be-vietnam-pro);
-  --font-hello-paris: 'Hello Paris', serif;
-  --font-hello-paris-script: 'Hello Paris Script', cursive;
-  --font-hello-paris-extra: 'Hello Paris Extra', serif;
+  --font-hello-paris: "Hello Paris", serif;
+  --font-hello-paris-script: "Hello Paris Script", cursive;
+  --font-hello-paris-extra: "Hello Paris Extra", serif;
   --font-tangerine: var(--font-tangerine);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -52,161 +52,177 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(0.8705 0.0499 73.0430);
-  --foreground: oklch(0.3200 0.1162 12.4970);
-  --card: oklch(0.8705 0.0499 73.0430);
-  --card-foreground: oklch(0.3200 0.1162 12.4970);
-  --popover: oklch(0.8705 0.0499 73.0430);
-  --popover-foreground: oklch(0.3200 0.1162 12.4970);
-  --primary: oklch(0.3200 0.1162 12.4970);
-  --primary-foreground: oklch(0.8705 0.0499 73.0430);
-  --secondary: oklch(0.8008 0.0532 71.6841);
-  --secondary-foreground: oklch(0.3200 0.1162 12.4970);
-  --muted: oklch(0.9370 0.0256 73.1800);
+  --background: oklch(0.8705 0.0499 73.043);
+  --foreground: oklch(0.32 0.1162 12.497);
+  --card: oklch(0.8705 0.0499 73.043);
+  --card-foreground: oklch(0.32 0.1162 12.497);
+  --popover: oklch(0.8705 0.0499 73.043);
+  --popover-foreground: oklch(0.32 0.1162 12.497);
+  --primary: oklch(0.32 0.1162 12.497);
+  --primary-foreground: oklch(0.8705 0.0499 73.043);
+  --secondary: oklch(0.73 0.1 63.12);
+  --secondary-foreground: oklch(0.32 0.1162 12.497);
+  --muted: oklch(0.937 0.0256 73.18);
   --muted-foreground: oklch(0.3954 0.1383 10.0789);
-  --accent: oklch(0.3200 0.1162 12.4970);
-  --accent-foreground: oklch(0.8705 0.0499 73.0430);
+  --accent: oklch(0.32 0.1162 12.497);
+  --accent-foreground: oklch(0.8705 0.0499 73.043);
   --destructive: oklch(0.3954 0.1383 10.0789);
-  --destructive-foreground: oklch(0.8705 0.0499 73.0430);
+  --destructive-foreground: oklch(0.8705 0.0499 73.043);
   --border: oklch(0.7976 0.0438 77.5517);
-  --input: oklch(0.8008 0.0532 71.6841);
-  --ring: oklch(0.3200 0.1162 12.4970);
-  --chart-1: oklch(0.3200 0.1162 12.4970);
-  --chart-2: oklch(0.8008 0.0532 71.6841);
+  --input: oklch(0.73 0.1 63.12);
+  --ring: oklch(0.32 0.1162 12.497);
+  --chart-1: oklch(0.32 0.1162 12.497);
+  --chart-2: oklch(0.73 0.1 63.12);
   --chart-3: oklch(0.5051 0.1097 64.3604);
   --chart-4: oklch(0.7976 0.0438 77.5517);
-  --chart-5: oklch(0.6016 0.1051 77.9580);
-  --sidebar: oklch(0.8705 0.0499 73.0430);
-  --sidebar-foreground: oklch(0.3200 0.1162 12.4970);
-  --sidebar-primary: oklch(0.3200 0.1162 12.4970);
-  --sidebar-primary-foreground: oklch(0.8705 0.0499 73.0430);
+  --chart-5: oklch(0.6016 0.1051 77.958);
+  --sidebar: oklch(0.8705 0.0499 73.043);
+  --sidebar-foreground: oklch(0.32 0.1162 12.497);
+  --sidebar-primary: oklch(0.32 0.1162 12.497);
+  --sidebar-primary-foreground: oklch(0.8705 0.0499 73.043);
   --sidebar-accent: oklch(0.3954 0.1383 10.0789);
-  --sidebar-accent-foreground: oklch(0.8705 0.0499 73.0430);
+  --sidebar-accent-foreground: oklch(0.8705 0.0499 73.043);
   --sidebar-border: oklch(0.7976 0.0438 77.5517);
-  --sidebar-ring: oklch(0.3200 0.1162 12.4970);
+  --sidebar-ring: oklch(0.32 0.1162 12.497);
 }
 
 .dark {
-  --background: oklch(0.3200 0.1162 12.4970);
-  --foreground: oklch(0.8705 0.0499 73.0430);
-  --card: oklch(0.3200 0.1162 12.4970);
-  --card-foreground: oklch(0.8705 0.0499 73.0430);
-  --popover: oklch(0.3200 0.1162 12.4970);
-  --popover-foreground: oklch(0.8705 0.0499 73.0430);
-  --primary: oklch(0.8705 0.0499 73.0430);
-  --primary-foreground: oklch(0.3200 0.1162 12.4970);
+  --background: oklch(0.32 0.1162 12.497);
+  --foreground: oklch(0.8705 0.0499 73.043);
+  --card: oklch(0.32 0.1162 12.497);
+  --card-foreground: oklch(0.8705 0.0499 73.043);
+  --popover: oklch(0.32 0.1162 12.497);
+  --popover-foreground: oklch(0.8705 0.0499 73.043);
+  --primary: oklch(0.8705 0.0499 73.043);
+  --primary-foreground: oklch(0.32 0.1162 12.497);
   --secondary: oklch(0.3954 0.1383 10.0789);
-  --secondary-foreground: oklch(0.8705 0.0499 73.0430);
+  --secondary-foreground: oklch(0.8705 0.0499 73.043);
   --muted: oklch(0.4336 0.1375 8.7792);
-  --muted-foreground: oklch(0.9370 0.0256 73.1800);
-  --accent: oklch(0.8705 0.0499 73.0430);
-  --accent-foreground: oklch(0.3200 0.1162 12.4970);
-  --destructive: oklch(0.9370 0.0256 73.1800);
-  --destructive-foreground: oklch(0.3200 0.1162 12.4970);
+  --muted-foreground: oklch(0.937 0.0256 73.18);
+  --accent: oklch(0.8705 0.0499 73.043);
+  --accent-foreground: oklch(0.32 0.1162 12.497);
+  --destructive: oklch(0.937 0.0256 73.18);
+  --destructive-foreground: oklch(0.32 0.1162 12.497);
   --border: oklch(0.7976 0.0438 77.5517);
   --input: oklch(0.3954 0.1383 10.0789);
-  --ring: oklch(0.8705 0.0499 73.0430);
-  --chart-1: oklch(0.8705 0.0499 73.0430);
-  --chart-2: oklch(0.3200 0.1162 12.4970);
-  --chart-3: oklch(0.8008 0.0532 71.6841);
+  --ring: oklch(0.8705 0.0499 73.043);
+  --chart-1: oklch(0.8705 0.0499 73.043);
+  --chart-2: oklch(0.32 0.1162 12.497);
+  --chart-3: oklch(0.73 0.1 63.12);
   --chart-4: oklch(0.4336 0.1375 8.7792);
   --chart-5: oklch(0.7976 0.0438 77.5517);
-  --sidebar: oklch(0.3200 0.1162 12.4970);
-  --sidebar-foreground: oklch(0.8705 0.0499 73.0430);
-  --sidebar-primary: oklch(0.8705 0.0499 73.0430);
-  --sidebar-primary-foreground: oklch(0.3200 0.1162 12.4970);
-  --sidebar-accent: oklch(0.9370 0.0256 73.1800);
-  --sidebar-accent-foreground: oklch(0.3200 0.1162 12.4970);
+  --sidebar: oklch(0.32 0.1162 12.497);
+  --sidebar-foreground: oklch(0.8705 0.0499 73.043);
+  --sidebar-primary: oklch(0.8705 0.0499 73.043);
+  --sidebar-primary-foreground: oklch(0.32 0.1162 12.497);
+  --sidebar-accent: oklch(0.937 0.0256 73.18);
+  --sidebar-accent-foreground: oklch(0.32 0.1162 12.497);
   --sidebar-border: oklch(0.7976 0.0438 77.5517);
-  --sidebar-ring: oklch(0.8705 0.0499 73.0430);
+  --sidebar-ring: oklch(0.8705 0.0499 73.043);
 }
 
 @layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 text-secondary;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-foreground text-secondary;
   }
 }
 
 /* Hello Paris Font Family */
 @font-face {
-    font-family: 'Hello Paris';
-    src: url('/Hello-Paris-Font-Family/HelloParisSerif-Medium.eot');
-    src: local('Hello Paris Medium'), local('HelloParisSerif-Medium'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Medium.eot?#iefix') format('embedded-opentype'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Medium.woff2') format('woff2'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Medium.woff') format('woff'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hello Paris";
+  src: url("/Hello-Paris-Font-Family/HelloParisSerif-Medium.eot");
+  src:
+    local("Hello Paris Medium"),
+    local("HelloParisSerif-Medium"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Medium.eot?#iefix") format("embedded-opentype"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Medium.woff2") format("woff2"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Medium.woff") format("woff"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hello Paris';
-    src: url('/Hello-Paris-Font-Family/HelloParisSerif-Regular.eot');
-    src: local('Hello Paris'), local('HelloParisSerif-Regular'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Regular.woff2') format('woff2'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Regular.woff') format('woff'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hello Paris";
+  src: url("/Hello-Paris-Font-Family/HelloParisSerif-Regular.eot");
+  src:
+    local("Hello Paris"),
+    local("HelloParisSerif-Regular"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Regular.eot?#iefix") format("embedded-opentype"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Regular.woff2") format("woff2"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Regular.woff") format("woff"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hello Paris Extra';
-    src: url('/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.eot');
-    src: local('Hello Paris Extra Light'), local('HelloParisSerif-ExtraLight'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.woff2') format('woff2'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.woff') format('woff'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hello Paris Extra";
+  src: url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.eot");
+  src:
+    local("Hello Paris Extra Light"),
+    local("HelloParisSerif-ExtraLight"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.eot?#iefix") format("embedded-opentype"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.woff2") format("woff2"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.woff") format("woff"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hello Paris';
-    src: url('/Hello-Paris-Font-Family/HelloParisSerif-Light.eot');
-    src: local('Hello Paris Light'), local('HelloParisSerif-Light'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Light.eot?#iefix') format('embedded-opentype'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Light.woff2') format('woff2'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Light.woff') format('woff'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hello Paris";
+  src: url("/Hello-Paris-Font-Family/HelloParisSerif-Light.eot");
+  src:
+    local("Hello Paris Light"),
+    local("HelloParisSerif-Light"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Light.eot?#iefix") format("embedded-opentype"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Light.woff2") format("woff2"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Light.woff") format("woff"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hello Paris';
-    src: url('/Hello-Paris-Font-Family/HelloParisSerif-Bold.eot');
-    src: local('Hello Paris Bold'), local('HelloParisSerif-Bold'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Bold.woff2') format('woff2'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Bold.woff') format('woff'),
-        url('/Hello-Paris-Font-Family/HelloParisSerif-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hello Paris";
+  src: url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.eot");
+  src:
+    local("Hello Paris Bold"),
+    local("HelloParisSerif-Bold"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.eot?#iefix") format("embedded-opentype"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.woff2") format("woff2"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.woff") format("woff"),
+    url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hello Paris Script';
-    src: url('/Hello-Paris-Font-Family/HelloParisScript.eot');
-    src: local('Hello Paris Script'), local('HelloParisScript'),
-        url('/Hello-Paris-Font-Family/HelloParisScript.eot?#iefix') format('embedded-opentype'),
-        url('/Hello-Paris-Font-Family/HelloParisScript.woff2') format('woff2'),
-        url('/Hello-Paris-Font-Family/HelloParisScript.woff') format('woff'),
-        url('/Hello-Paris-Font-Family/HelloParisScript.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hello Paris Script";
+  src: url("/Hello-Paris-Font-Family/HelloParisScript.eot");
+  src:
+    local("Hello Paris Script"),
+    local("HelloParisScript"),
+    url("/Hello-Paris-Font-Family/HelloParisScript.eot?#iefix") format("embedded-opentype"),
+    url("/Hello-Paris-Font-Family/HelloParisScript.woff2") format("woff2"),
+    url("/Hello-Paris-Font-Family/HelloParisScript.woff") format("woff"),
+    url("/Hello-Paris-Font-Family/HelloParisScript.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 @layer utilities {
@@ -223,5 +239,44 @@
 
   .animate-zoom-out {
     animation: zoom-out 0.5s ease-out forwards;
+  }
+
+  @keyframes gentle-float-right {
+    0%,
+    100% {
+      transform: translateY(0px) rotate(0deg) scale(1);
+    }
+    20% {
+      transform: translateY(-8px) rotate(-1.2deg) scale(1.03);
+    }
+    40% {
+      transform: translateY(-15px) rotate(0.7deg) scale(0.97);
+    }
+    60% {
+      transform: translateY(-6px) rotate(-0.9deg) scale(1.02);
+    }
+    80% {
+      transform: translateY(-12px) rotate(1.1deg) scale(0.99);
+    }
+  }
+  @keyframes gentle-float-left {
+    0%,
+    100% {
+      transform: translateY(0px) rotate(0deg) scale(1);
+    }
+    25% {
+      transform: translateY(-5px) rotate(1deg) scale(1.02);
+    }
+    50% {
+      transform: translateY(-10px) rotate(-0.5deg) scale(0.98);
+    }
+    75% {
+      transform: translateY(-3px) rotate(0.8deg) scale(1.01);
+    }
+  }
+
+  .animate-gentle-float-right {
+    animation: gentle-float-right 10s ease-in-out infinite;
+    transform-origin: center;
   }
 }
