--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --breakpoint-xs: 24rem;
 }
 
 :root {
@@ -127,10 +128,10 @@
     cursor: pointer;
   }
   * {
-    @apply border-border outline-ring/50 text-secondary;
+    @apply border-border outline-ring/50 text-primary;
   }
   body {
-    @apply bg-foreground text-secondary;
+    @apply bg-foreground text-primary;
   }
 }
 
