--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,8 @@
   --background-image-rumah-gadang: url('/rumah-gadang.webp');
   --background-image-pattern-flower: url('/pattern-flower.webp');
   --background-image-pattern-batik: url('/pattern-batik.webp');
+  --background-image-frame-flower-with-rg: url('/frame-flower-with-rg.webp');
+  --background-image-frame-flower: url('/frame-flower.webp');
 }
 
 :root {
@@ -208,21 +210,6 @@ body {
 }
 
 @font-face {
-  font-family: "Hello Paris Extra";
-  src: url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.eot");
-  src:
-    local("Hello Paris Extra Light"),
-    local("HelloParisSerif-ExtraLight"),
-    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.eot?#iefix") format("embedded-opentype"),
-    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.woff2") format("woff2"),
-    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.woff") format("woff"),
-    url("/Hello-Paris-Font-Family/HelloParisSerif-ExtraLight.ttf") format("truetype");
-  font-weight: 200;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
   font-family: "Hello Paris";
   src: url("/Hello-Paris-Font-Family/HelloParisSerif-Light.eot");
   src:
@@ -248,21 +235,6 @@ body {
     url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.woff") format("woff"),
     url("/Hello-Paris-Font-Family/HelloParisSerif-Bold.ttf") format("truetype");
   font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Hello Paris Script";
-  src: url("/Hello-Paris-Font-Family/HelloParisScript.eot");
-  src:
-    local("Hello Paris Script"),
-    local("HelloParisScript"),
-    url("/Hello-Paris-Font-Family/HelloParisScript.eot?#iefix") format("embedded-opentype"),
-    url("/Hello-Paris-Font-Family/HelloParisScript.woff2") format("woff2"),
-    url("/Hello-Paris-Font-Family/HelloParisScript.woff") format("woff"),
-    url("/Hello-Paris-Font-Family/HelloParisScript.ttf") format("truetype");
-  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
